# joytyping

./: index.html  package.json  pnpm-lock.yaml  quick-lookup.html  vite.config.ts  vite.config.ts.timestamp-1702314488656-8f0fbabc5d371.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: file_wrapper.rs  lib.rs  main.rs  settings_data.rs  tauri_app_handle_wrapper.rs
src-tauri/src/app_data_directory_manager/: mod.rs
src-tauri/src/gamepad/: gilrs_wrapper.rs  mod.rs  tests.rs
src-tauri/src/gamepad/cardinal_levers_move_detector/: mod.rs  tests.rs
src-tauri/src/gamepad/dynamic_switch_event_reactions/: mod.rs  tests.rs
src-tauri/src/gamepad/gilrs_events/: gilrs_wrapper.rs  mod.rs  tests.rs
src-tauri/src/gamepad/layer_node/: mod.rs
src-tauri/src/gamepad/layers_navigator/: mod.rs  tests.rs
src-tauri/src/gamepad/layers_wrapper/: mod.rs
src-tauri/src/gamepad/mouse_cursor_move_detector/: mod.rs
src-tauri/src/gamepad/on_release_reactions/: mod.rs  tests.rs
src-tauri/src/gamepad/tests/: fn_next_event.rs  (+4 more)
src-tauri/src/gamepad_event_reactor/: mod.rs
src-tauri/src/gamepad_listener/: mod.rs
src-tauri/src/input_controller/: enigo_wrapper.rs  mod.rs  tests.rs
src-tauri/src/joy_input/: enigo_wrapper.rs  mod.rs  tests.rs
src-tauri/src/joy_keyboard/: enigo_wrapper.rs  mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/quick_lookup_window/: default_startup_script.js  mod.rs
src-tauri/src/settings/: default_settings.toml  mod.rs  settings_data.rs  tests.rs
src-tauri/src/zip_downloader/: mod.rs  reqwest_wrapper.rs  tests.rs  zip_archive_wrapper.rs
(+166 files in other folders)
