[package]
name = "joytyping"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # required by tauri
gilrs="0.10.2"
enigo="0.1.2"
toml = "0.7.6"
thiserror = "1.0.44"
notify = "6.1.1"
home = "0.5.5"
dark-light = "1.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
mockall="0.11.4"
